2024-05-20 Se sube avance a reporte de pesadas.

--- a/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Index.cshtml
@@ -60,7 +60,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Reporte de Pesadas Puebla</h3>
+                <h3>Reporte de Pesadas</h3>
             </div>
         </div>
 
