--- a/CódigoFuente/BitacorasProduccion/Views/class_v3/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/class_v3/Index.cshtml
@@ -118,6 +118,27 @@
                                                     @Html.DisplayNameFor(model => model.Length_mm_)
                                                 </th>
                                                 <th>
+                                                    @Html.DisplayNameFor(model => model.commodity)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.flatness_metric)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.surface_treatment)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.coating_weight)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.customer_part_msa)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.outer_diameter_coil)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.inner_diameter_coil)
+                                                </th>
+                                                <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
                                             </tr>
@@ -155,6 +176,27 @@
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.Length_mm_)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.commodity)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.flatness_metric)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.surface_treatment)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.coating_weight)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.customer_part_msa)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.outer_diameter_coil)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.inner_diameter_coil)
                                                     </td>
                                                     <td>
                                                         @if (item.activo)
