2024-06-07 Se oculta vcard.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -881,8 +881,8 @@
                         <a data-toggle="tooltip" data-placement="top" title="Directorio" href="@Url.Action( "Index", "Contacts")">
                             <span class="glyphicon glyphicon-book" style="color:lightgray" aria-hidden="true"></span>
                         </a>
-                        <a data-toggle="tooltip" data-placement="top" title="Vcard" href="@Url.Action( "vcard", "Utilidades")">
-                            <span class="glyphicon glyphicon-qrcode" style="color:lightgray" aria-hidden="true"></span>
+                        <a data-toggle="tooltip" data-placement="top" title="Próximamente" href="#">
+                            <span class="glyphicon glyphicon-info-sign" style="color:lightgray" aria-hidden="true"></span>
                         </a>
                     </div>
                     <!-- /menu footer buttons -->
